@@ -5061,3 +5061,12 @@ M       vbm_vol_simgrow.mexw64
 
 ------------------------------------------------------------------------
 r603 | gaser | 2014-09-19 10:30:56
+
+M       CHANGES.txt
+M       cg_vbm_write.m
+M       vbm12.man
+M       vbm_surf_createCS.m
+
+some small bugs removed...
+------------------------------------------------------------------------
+r604 | gaser | 2014-09-19 11:48:09
